2006-06-08  Nurdin Premji  <npremji@redhat.com>

	* observers/TaskObserverRoot.java (apply): Changed reference from
	"TasksObserver" to "OffspringObserver"
	* SessionProcDataModel.java: Changed references from "Tasks" to
	"Offspring" and "TasksObserver" to "OffspringObserver"

2006-06-07  Sami Wagiaalla  <swagiaal@redhat.com>

	* SessionProcDataModel.java: Removed call to refresh.
	only Gui.java should be calling refresh (fix for 2722).
	* datamodels/FlatProcObservableLinkedList.java: Added/removed
	debug output. No changes.

2006-05-31  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcDataModel.java: Removed timer insertion/refresh
	calls (fix for 2702).
	* ProcWiseDataModel.java: Ditto.
	* datamodels/FlatProcObservableLinkedList.java: Ditto.

2006-05-30  Andrew Cagney  <cagney@redhat.com>

	* observers/TaskObserverRoot.java: Use frysk.proc.TasksObserver.
	* SessionProcDataModel.java: Ditto.

	* observers/TaskForkedObserver.java: Handle updateForkedOffspring.
	Always block both the parent and offspring (the bottomHalf always
	unblocks).
	* observers/TaskCloneObserver.java: Handle updateClonedOffspring.
	* EventLogger.java: Handle updateForkedOffspring, and
	updateClonedOffspring.

2006-05-29  Sami Wagiaalla  <swagiaal@redhat.com>

	* GuiProc.java: Added null termination check to 
	getNiceExecutablePath  (work around for 2663).
	* observers/ObserverManager.java: Removed all empty exception
	catches. NEVER agian :).
	* ObservableLinkedList.java: Commented out debug output.
	* filters/Filter.java: Ditto.
	* UniqueHashMap.java (add): Changed type of exception
	thrown.
	* FilterRow.java: Removed some debug output.

2006-05-26  Sami Wagiaalla  <swagiaal@redhat.com>

	* filters/Filter.java: Added saving/loading of filters
	boolean value.
	* datamodels/FlatProcObservableLinkedList.java: now using
	getNiceExecutablePath instead of getFullExecutablePath.
	* SessionProcTreeView.java: Added displaying of executable
	path of selected proc in the status bar.