@@ -1,3 +1,8 @@
+2006-06-08  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* WindowManager.java (initSessionDruidWindow): Added 
+	Session Manager GUI to Window Manager.
+
 2006-06-08  Nurdin Premji  <npremji@redhat.com>
 
 	* observers/TaskObserverRoot.java (apply): Changed reference from
